--- a/style.css
+++ b/style.css
@@ -1,56 +1,138 @@
 * {
-  margin: 0;
-  text-decoration: none;
-  border: none;
-}
-#nav-section {
-    padding: 2rem 0;
-    background-color: whitesmoke;
-}
+    margin: 0;
+    text-decoration: none;
+    border: none;
+    box-sizing: border-box;
+    overflow-x: hidden;
+  }
+
 .container {
   width: 80%;
   margin: auto;
+
 }
 
 nav {
-  display: flex;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: 50px;
+    align-items: end;
+    background-color: #A9A5A5;
+    padding-left: 10%;
+    padding-right: 10%;
+    position: relative;
+    
+}
+
+.nav-items {
+  display:flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  column-gap: 20px;
-  
-}
-
-.logo {
-  font-family: "Raleway, sans-serif";
-  font-size: 27.2px;
-  font-weight: 700;
-  line-height: 30px;
+  justify-content: space-evenly;
+  align-items: end;
+  gap: 20px; 
 }
 
 
-
-.nav-left,
-.nav-right {
-  /* width: 80%; */
-  display: flex;
-  flex-direction: row;
-  /* justify-content: flex-end; */
-  column-gap: 20px;
-}
-.nav-right {
+.nav-text {
+  color: #fff;
 }
 
 .hero {
-  background-image: url(./images/bgimage.jpg);
-  height: 100rem;
-  background-size: contain;
+  background-image: url(./images/work_1.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-position: center; 
   background-repeat: no-repeat;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  background-attachment: fixed;
+}
+
+.hero-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8% 0 0 0;
+
+}
+
+.hero-text {
+  font-family: "Abril Fatface", sans-serif;
+  font-size: 112px;
+  font-weight: 200px;
+  line-height:134.4px;
+  color: #ffffff;
 }
 
 
-.hero-overlay {
+
+.overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0,0, 0.3);
+}
+
+#about {
+  margin-top: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-bottom: 5%;
+}
+
+.about-cont {
+  display: flex;
+  justify-content: space-between;
+  width: 70%;
+}
+
+
+.section {
+  padding: 7rem 0;
+
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  /* flex-wrap: wrap; */
+   /* margin-right: 15px;
+  margin-left: 15px;  */
+  /* unicode-bidi: isolate; */
+  /* padding: 10%; */
+  
+}
+
+.services div {
+  width: 50%;
+  
+  
+}
+
+/* .services-border {
+  border: 1px solid black;
+  gap: 10px; */
+
+.headings h4 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 15.36px;
+  font-weight: 400px;
+  line-height:27.4px;
+  color: #000;
+}
+
+.paragraph p{
+  ont-family: "Roboto Mono";
+  font-size: 15.36px;
+  font-weight: 400px;
+  line-height:27.4px;
+  color: #000;
   
 }
