--- a/style.css
+++ b/style.css
@@ -13,34 +13,14 @@
 }
 
 
-.about-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.about-image {
-  display: flex;
-  justify-content: center;
-}
 
-.about-image img {
-  height: 400px;
-  object-fit: contain;
-  border-radius: 20px;
-}
-.about-description {
-  padding-right: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  row-gap: 20px;
-}
 nav {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   height: 50px;
   align-items: end;
-  background-color: rgba(0,0,0, 0.3);
+  background-color: rgba(0,0,0, 0.6);
   padding-left: 10%;
   padding-right: 10%;
   position: relative;
@@ -61,9 +41,10 @@ nav {
 .hero {
   background-image: url(./images/herobg.jpg);
   height: 100vh;
-  width: 100%;
-  background-size: center;
-  background-position: top;
+  width: 100vw;
+  background-size: contain;
+  background-position: center;
+
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
@@ -82,7 +63,7 @@ nav {
 
 .hero-text {
   font-family: "Abril Fatface", sans-serif;
-  font-size: 100px;
+  font-size: 30px;
   font-weight: 10px;
   color: #ffffff;
 }
@@ -94,13 +75,13 @@ nav {
   align-items: center;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .about {
   width: 100%;
   padding: 4rem;
-  background-color: #5E7880;
+  background-color: #B2B2B2;
 }
 
 .about-cont {
@@ -108,11 +89,55 @@ nav {
   justify-content: space-between;
   width: 60%;
 }
-.about-image1 {
-  width: 30vw;
-  display: flex;
-  justify-content: space-around;
+
+.about-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
+.about-image {
+  display: flex;
+  justify-content: center;
+}
+
+.about-image img {
+  height: 400px;
+  object-fit: contain;
+  border-radius: 20px;
+}
+.about-description {
+  padding-right: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: 20px;
+
+}
+
+.about-head {
+  font-size: 50px;
+  font-weight: 300;
+
+}
+
+.about-paragraph {
+  font-size: 30px;
+  line-height: 1.5;
+}
+  
+  
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .slide-top {
 	-webkit-animation: slide-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
@@ -121,17 +146,17 @@ nav {
 
 .skills-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   /* width: 100%; */
   align-items: flex-start;
   /* padding: 30px 30px; */
-  background-color: #5E7880;
+  background-color: #B2B2B2;
 }
 
 .skill-head {
   /* padding-top: 30px;
   padding-bottom: 20px; */
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
   align-items: center;
 }
@@ -284,8 +309,13 @@ nav {
 
 .spikes {
   position: relative;
-  background: #5E7880;
-  height: 55vh;
+  background: #B2B2B2;
+  height:40vh;
+}
+
+
+footer{
+  padding-top:4rem;
 }
 
 .spikes::after {
@@ -300,19 +330,27 @@ nav {
   background-size: 45px 100%;
   background-image: linear-gradient(135deg, #fffcfc 25%, transparent 25%),
     linear-gradient(225deg, #fefeff 25%, transparent 25%);
-  background-position: 0 0;
 }
 
-.footer1 {
-  margin: 40px;
+.socials {
+  margin: 4rem 0;
+  margin-bottom:2rem;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  row-gap: 10px;
+  justify-content: center;
+  gap: 30px;
   /* width: 20%;
   margin:auto;
   margin-top: 40px;
   align-items: center; */
+}
+
+.socials i{
+  font-size: 2rem;
+  overflow-y: hidden;
+}
+
+.socials{
+
 }
 
 .footer2 {
