--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   border: none;
   box-sizing: border-box;
   overflow-x: hidden;
+  padding: 0;
 }
 
 .container {
@@ -24,6 +25,7 @@ nav {
   padding-left: 10%;
   padding-right: 10%;
   position: relative;
+  
 }
 
 .nav-items {
@@ -41,16 +43,16 @@ nav {
 .hero {
   background-image: url(./images/herobg.jpg);
   height: 100vh;
-  width: 100vw;
+  /* width: 100%; */
   background-size: contain;
   background-position: center;
-
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
   background-attachment: fixed;
   /* object-fit: contain; */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .hero-info {
@@ -73,11 +75,17 @@ nav {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  /* width: 100vw; */
+  /* background-color: rgba(0, 0, 0, 0.5);#7F7F7F */
+  
 }
 
+.hero-button {
+  border-radius: 3px;
+  background-color: #00325B;
+
+}
 .about {
   width: 100%;
   padding: 4rem;
@@ -109,19 +117,44 @@ nav {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  row-gap: 20px;
+  gap: 20px;
 
 }
 
 .about-head {
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 300;
+  align-items: center;
 
 }
 
 .about-paragraph {
-  font-size: 30px;
-  line-height: 1.5;
+  font-size: 20px;
+  /* line-height: 1; */
+}
+
+.button-container {
+  padding: 10px;
+  gap: 30px;
+ display: flex;
+ flex-direction: row;
+ /* justify-content: space-around; */
+ align-items: center;
+}
+
+
+.about-button {
+  justify-content: space-around;
+  line-height: 2rem;
+  padding: 5px;
+  background-color: #728096;
+  border-radius: 3px;
+  gap: 10px;
+  overflow: hidden;
+  /* display: flex;
+  flex-direction: row; */
+  justify-content: center;
+
 }
   
   
@@ -150,7 +183,10 @@ nav {
   /* width: 100%; */
   align-items: flex-start;
   /* padding: 30px 30px; */
-  background-color: #B2B2B2;
+  background-color: #728096;
+  padding-top: 10px;
+  /* clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+  clip-path: polygon(44% 1%, 100% 0%, 100% 100%, 36% 99%, 0% 50%); */
 }
 
 .skill-head {
@@ -160,12 +196,7 @@ nav {
   font-weight: 700;
   align-items: center;
 }
-/* .skills-container {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  align-items: flex-start;
-   */
+
 
 .container.skills-cont {
   margin-top: 4rem;
@@ -178,7 +209,7 @@ nav {
 }
 
 .skills-text h4 {
-  font-weight: 30px;
+  font-weight: 20px;
   /* display: flex;
   flex-direction: column; */
 }
@@ -195,34 +226,35 @@ nav {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  height: 20px;
+  height: 10px;
 }
 
 .progress-bar {
   width: 85%;
-  background-color: blue;
+  background-color: rgb(96, 96, 99);
   height: 5px;
-  border: 1px solid blue;
+  border: 1px solid rgb(96, 96, 99);
   border-radius: 30px;
 }
 .progress1 {
   width: 80%;
-  background-color: blue;
+  background-color: rgb(96, 96, 99);
   height: 5px;
-  border: 1px solid blue;
+  border: 1px solid rgb(96, 96, 99);
   border-radius: 30px;
 }
 .progress2 {
+
   width: 60%;
-  background-color: blue;
+  background-color: rgb(96, 96, 99);
   height: 5px;
-  border: 1px solid blue;
+  border: 1px solid rgb(96, 96, 99);
   border-radius: 30px;
 }
 
 .name-figure {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100%;
   align-items: center;
 }
@@ -233,7 +265,7 @@ nav {
 
 .inner-sect {
   border-radius: 20px;
-  background: rgba(233, 227, 227, 0.3);
+  background: rgba(150, 148, 148, 0.3);
   text-align: center;
   line-height: 27px;
   padding: 20px;
@@ -264,11 +296,13 @@ nav {
   font-size: 50px;
   font-weight: 700;
   /* line-height: 28.8px; */
+  padding-bottom: 5px;
+  /* margin-bottom: 5px; */
 }
 
 .inner-sect:hover {
   border-color: black;
-  color: white;
+  color: #728096
 }
 
 .row {
@@ -310,7 +344,8 @@ nav {
 .spikes {
   position: relative;
   background: #B2B2B2;
-  height:40vh;
+  height:50vh;
+  overflow: hidden;
 }
 
 
@@ -349,7 +384,12 @@ footer{
   overflow-y: hidden;
 }
 
-.socials{
+.contact-details {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  
 
 }
 
