--- a/style.css
+++ b/style.css
@@ -1,302 +1,38 @@
 * {
   margin: 0;
-  text-decoration: none;
+  /* text-decoration: none; */
   border: none;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
-.container {
-  width: 80%;
-  margin: auto;
+header {
+  padding-top: 4rem;
 }
 
-.about-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-.about-image {
-  display: flex;
-  justify-content: center;
-}
 
-.about-image img {
-  height: 400px;
-  object-fit: contain;
-  border-radius: 20px;
-}
-.about-description {
-  padding-right: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  row-gap: 20px;
-}
 nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  height: 50px;
-  align-items: end;
-  background-color: #a9a5a5;
-  padding-left: 10%;
-  padding-right: 10%;
-  position: relative;
-}
-
-.nav-items {
-  display: flex;
-  flex-direction: row;
   justify-content: space-evenly;
-  align-items: end;
-  gap: 20px;
-}
-
-.nav-text {
-  color: #fff;
-}
-
-.hero {
-  background-image: url(./images/work_1.jpg);
-  height: 100vh;
-  width: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
   align-items: center;
-  justify-content: center;
-  background-attachment: fixed;
+  padding-top: 2rem;
+ 
 }
 
-.hero-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 8% 0 0 0;
+
+body {
+  overflow: hidden;
+  background-color: #f7f7f7;
+  font-style: ;
+  
 }
 
-.hero-text {
-  font-family: "Abril Fatface", sans-serif;
-  font-size: 100px;
-  font-weight: 10px;
-  color: #ffffff;
-}
 
-.overlay {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
-}
+#container {
+  overflow-y: auto;
+  border-radius: 2rem;
+  box-shadow: 0 20px 40px rgba(58, 125, 171, 0.15);
 
-.about {
-  width: 100%;
-  padding: 4rem;
-  background-color: aqua;
-}
-
-.about-cont {
-  display: flex;
-  justify-content: space-between;
-  width: 60%;
-}
-.about-image1 {
-  width: 30vw;
-  display: flex;
-  justify-content: space-around;
-}
-
-.skill-head {
-  padding-top: 30px;
-  padding-bottom: 20px;
-  font-size: 50px;
-  font-weight: 700;
-}
-.skills-cont {
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  align-items: flex-start;
-}
-.container.skills-cont {
-  margin-top: 4rem;
-}
-.skills-text {
-  font-family: Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-}
-
-.skills-text h4 {
-  font-weight: 30px;
-  /* display: flex;
-  flex-direction: column; */
-}
-
-.skill {
-  margin-bottom: 50px;
-}
-
-.progress-bar-container {
-  width: 100%;
-  border: 1px solid rgb(246, 246, 248);
-  /* padding: 2px; */
-  border-radius: 30px;
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.progress-bar {
-  width: 85%;
-  background-color: blue;
-  height: 5px;
-  border: 1px solid blue;
-  border-radius: 30px;
-}
-.progress1 {
-  width: 80%;
-  background-color: blue;
-  height: 5px;
-  border: 1px solid blue;
-  border-radius: 30px;
-}
-.progress2 {
-  width: 60%;
-  background-color: blue;
-  height: 5px;
-  border: 1px solid blue;
-  border-radius: 30px;
-}
-
-.name-figure {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  align-items: center;
-}
-
-.section {
-  padding: 7rem 0;
-}
-
-.inner-sect {
-  border-radius: 20px;
-  background: rgba(233, 227, 227, 0.3);
-  text-align: center;
-  line-height: 27px;
-  padding: 20px;
-}
-
-.inner-sect i {
-  line-height: 48px;
-}
-
-.inner-sect h4 {
-  line-height: 30px;
-}
-
-.inner-sect p {
-  line-height: 27.6px;
-}
-
-.skills-cont {
-  width: 70%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-.service-head {
-  text-align: center;
-  /* font-family: "Josefin Sans", sans-serif; */
-  font-size: 50px;
-  font-weight: 700;
-  /* line-height: 28.8px; */
-}
-
-.inner-sect:hover {
-  border-color: black;
-  color: white;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  gap: 30px;
-  /* flex-wrap: wrap; */
-  /* margin-right: 15px;
-  margin-left: 15px;  */
-  /* unicode-bidi: isolate; */
-  /* padding: 10%; */
-}
-
-.services div {
-  width: 50%;
-}
-
-/* .services-border {
-  border: 1px solid black;
-  gap: 10px; */
-
-.headings h4 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  font-size: 15.36px;
-  font-weight: 400px;
-  line-height: 27.4px;
-  color: #000;
-}
-
-.paragraph p {
-  ont-family: "Roboto Mono";
-  font-size: 15.36px;
-  font-weight: 400px;
-  line-height: 27.4px;
-  color: #000;
-}
-
-.spikes {
-  position: relative;
-  background: #2c5594;
-  height: 55vh;
-}
-
-.spikes::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  left: -0%;
-  top: 0%;
-  z-index: 10;
-  display: block;
-  height: 45px;
-  background-size: 45px 100%;
-  background-image: linear-gradient(135deg, #fffcfc 25%, transparent 25%),
-    linear-gradient(225deg, #fefeff 25%, transparent 25%);
-  background-position: 0 0;
-}
-
-.footer1 {
-  margin: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  row-gap: 10px;
-  /* width: 20%;
-  margin:auto;
-  margin-top: 40px;
-  align-items: center; */
-}
-
-.footer2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
+  
+  
 }
